# weather-mcp-server

./: Dockerfile  LICENSE  PUBLISH_CHECKLIST.md  README.md  pyproject.toml  requirements.txt  server.py  smithery.yaml
.smithery/: server.yaml
